Atualização das redes sociais

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </article>
 
     <footer>
-        <a href="https://www.instagram.com/duarteedu1/" rel="_blank" target="external">Instagram</a> // <a href=""rel="_blank" target="external">Github</a>
+        <a href="https://www.instagram.com/duarteedu1/" rel="_blank" target="external">Instagram</a> // <a href="https://github.com/AlphaEduardo/Projeto-Traira"rel="_blank" target="external">Github</a>
     </footer>
 </body>
 </html>
