--- a/noticias.html
+++ b/noticias.html
@@ -16,7 +16,10 @@
        <nav id="menu">
            <img src="imagens/1200px-Fish_icon.svg.png" alt="icone site">
            <ul>
-               <li><a href="anzois.html">Anzois</a></li> <li><a href="varas.html">Varas Profissionais</a></li><li><a href="aquarios.html">Aquarios</a></li>         
+                <li><a href="anzois.html">Anzois</a></li> 
+                <li><a href="varas.html">Varas Profissionais</a></li>
+                <li><a href="aquarios.html">Aquarios</a></li>
+                <li class="img"><a href="index.html"><img src="imagens/25694.png" alt="home" class="home"></a></li>         
             </ul>
         </nav>
 
